#2818 [Fixed] Card: Block-end spacing too small

--- a/packages/core/src/components/card/card.scss
+++ b/packages/core/src/components/card/card.scss
@@ -34,7 +34,7 @@
 }
 
 .dso-card-container {
-  padding-block: units.$u2 units.$u1;
+  padding-block: units.$u2;
   padding-inline: units.$u2;
   inline-size: 100%;
   block-size: 100%;
