--- a/packages/dso-toolkit/src/components/rich-content/rich-content.scss
+++ b/packages/dso-toolkit/src/components/rich-content/rich-content.scss
@@ -4,10 +4,10 @@
   @include rich-content.children();
 
   > :first-child:not(hr, .dso-button-row) {
-    margin-block-start: rich-content.$margin-block-start * 0.5;
+    margin-block-start: var(--_dt-rich-content-margin-block-start, rich-content.$margin-block-start * 0.5);
   }
 
   > :last-child:not(hr, .dso-button-row) {
-    margin-block-end: rich-content.$margin-block-end * 0.5;
+    margin-block-end: var(--_dt-rich-content-margin-block-end, rich-content.$margin-block-end * 0.5);
   }
 }
